fix(prometheus): made prometheus discovery optional to avoid service crash